chore: checkpoint existing workspace changes